# mdc

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
mdc/: __init__.py  context.py  decorators.py  formatter.py  logging.py
tests/: mdc.py  mdc_tests.py
