[metadata]
name = mdc
version = 1.2.1
url = https://github.com/afriemann/mdc
author = Aljosha Friemann
author_email = a.friemann@automate.wtf
description = Mapped Diagnostic Context (MDC) library for python
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = logging, mdc, context
license_file = LICENSE.txt
classifiers =
    Topic :: System :: Logging
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = mdc
install_requires = python-json-logger

[options.package_data]
* = *.txt, *.md, *.rst

[nosetests]
verbosity   = 3
tests       = tests/
all-modules = True
rednose     = True
spec-doctests = True
doctest-extension = .rst
